--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,8 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "*.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      { "src": "frontend/**/*", "use": "@vercel/static-build" },
+      { "src": "backend/**/*", "use": "@vercel/node" }
     ]
-}
+  }
+  
